<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_filter"
    android:id="@+id/main_layout_filter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/lines_between_filters"
            android:paddingBottom="5dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="@dimen/scale_text_filter"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:text="@string/search_within"
                    android:textColor="@color/black"
                    android:paddingStart="6dp"
                    android:paddingEnd="10dp"/>
                <EditText
                    android:id="@+id/location_filter_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:hint="0"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:text="@string/meter"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/lines_between_filters">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="@dimen/scale_text_filter"
                />
            <CheckBox
                android:id="@+id/with_itself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_itself"
                android:textSize="@dimen/scale_text_filter"/>
            <CheckBox
                android:id="@+id/fast_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_food"
                android:textSize="@dimen/scale_text_filter"/>
            <CheckBox
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textSize="@dimen/scale_text_filter"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/lines_between_filters"
            android:paddingBottom="5dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="@dimen/scale_text_filter"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:text="@string/middle_receipt"
                    android:textColor="@color/black"
                    android:paddingStart="6dp"
                    android:paddingEnd="10dp"/>
                <EditText
                    android:id="@+id/middle_receipt_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:hint="0"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:maxLength="9"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/scale_text_filter"
                    android:text="@string/rubble"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/lines_between_filters">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="@dimen/scale_text_filter"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/icon_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_score_clear"/>
                <ImageView
                    android:id="@+id/icon_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_score_clear"/>
                <ImageView
                    android:id="@+id/icon_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_score_clear"/>
                <ImageView
                    android:id="@+id/icon_star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_score_clear"/>
                <ImageView
                    android:id="@+id/icon_star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_score_clear"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/clean_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_clear_button"
                android:layout_gravity="center"
                android:text="@string/clear_filter"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="3dp"
                />
            <Button
                android:id="@+id/apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_clear_button"
                android:layout_gravity="center"
                android:text="@string/apply_filter"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>