<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_main_screen">

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="ru.techpark.districtfood.Bookmarks.FragmentBookmarks"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_navigation_bookmarks_to_navigation_card_from_bookmarks"
            app:destination="@id/navigation_card_from_bookmarks"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />

    </fragment>

    <fragment
        android:id="@+id/navigation_main_screen"
        android:name="ru.techpark.districtfood.MainScreen.FragmentMainScreen"
        android:label="@string/title_main_screen"
        tools:layout="@layout/fragment_main_screen" >
        <action
            android:id="@+id/action_navigation_main_screen_to_navigation_card"
            app:destination="@id/navigation_card"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_navigation_main_screen_to_navigation_map_route"
            app:destination="@id/navigation_map_route"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="ru.techpark.districtfood.Map.FragmentMap"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.techpark.districtfood.Profile.FragmentProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_card"
        android:name="ru.techpark.districtfood.RestaurantTab.FragmentRestaurantTab"
        android:label="@string/title_main_screen"
        tools:layout="@layout/fragment_restaurant_tab" />

    <fragment
        android:id="@+id/navigation_card_from_bookmarks"
        android:name="ru.techpark.districtfood.RestaurantTab.FragmentRestaurantTab"
        android:label="@string/title_main_screen"
        tools:layout="@layout/fragment_restaurant_tab" />

    <fragment
        android:id="@+id/navigation_map_route"
        android:name="ru.techpark.districtfood.Map.FragmentMap"
        android:label="@string/title_main_screen"
        tools:layout="@layout/fragment_restaurant_tab" />
</navigation>