<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/burgers_back2"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Profile.Login">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/gradient"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="12dp"
            android:cropToPadding="true"
            android:padding="3dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon1" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:paddingTop="15dp"
            android:text="District Food"
            android:textColor="@color/grey_500"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:ignore="MissingConstraints"
            tools:text="District Food" />

        <TextView
            android:id="@+id/profileEmailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="войдите, чтобы\n продолжить"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/inset_white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_weight="1"
                android:text="@string/welcome"
                android:textColor="#006593"
                android:textSize="30sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="52dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"

            android:textColor="@color/grey_500"
            android:textColorHint="@color/grey_500"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="92dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/grey_500"
            android:textColorHint="@color/grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emailPasswordFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="Email, password"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">




        <Button
            android:id="@+id/loginBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1.5"
            android:background="@drawable/inset"
            android:text="@string/sign_in"
            android:elevation="6dp"
            android:stateListAnimator="@null"
            android:translationZ="4dp"

            android:theme="@style/RoundedCornerButton"/>


        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1.5"
            android:background="@drawable/inset"
            android:elevation="6dp"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            android:layout_marginEnd="20dp"
            android:drawableLeft="@drawable/icon_password"
            android:textColor="@color/black"
            android:text="@string/changePassword"
            android:textSize="12sp"
            android:theme="@style/RoundedCornerButton"/>
    </LinearLayout>



    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="New Here ?  Create Account"
        android:textColor="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />


</LinearLayout>
